# pyGame

./: README.md
flatBreaker/: pyproject.toml
flatBreaker/flatbreaker/: alive.py  aurore.py  farmer_test.py  snipet.py  solo_pong.py  test_invader.py
flatBreaker/flatbreaker/manager/: colider.py  input.py  invasion.py  wall.py
flatBreaker/flatbreaker/manager/colider/: ballColider.py  bulletColider.py  colider.py  dropColider.py
flatBreaker/flatbreaker/objects/: ball.py  boat.py  brick.py  bullet.py  environementTravel.py  invader.py  itemList.py  player.py
flatBreaker/flatbreaker/objects/bricks/: brick.py  commonBrick.py
flatBreaker/flatbreaker/objects/characters/invaders/: invader.py
flatBreaker/flatbreaker/objects/characters/nativs/: farmer.py
flatBreaker/flatbreaker/objects/drop/: ammunation.py  coin.py  drop.py  life.py  newBall.py
